# carvi-quests

./: .gitignore  ASSESSMENT.md  Cargo.toml  README.md  Taskfile.yml  compass.yml
cquests-llm/: Cargo.toml
crates/cquests-client/: Cargo.toml
crates/cquests-client/src/: main.rs
crates/cquests-core/: Cargo.toml
crates/cquests-core/src/: inventory.rs  items.rs  lib.rs
crates/cquests-engine/: Cargo.toml
crates/cquests-engine/src/: lib.rs
crates/cquests-gm/: Cargo.toml
crates/cquests-gm/src/: lib.rs
crates/cquests-llm/: Cargo.toml  build.rs
crates/cquests-llm/src/: lib.rs
crates/cquests-mcp/: Cargo.toml
crates/cquests-mcp/src/: lib.rs  sdk.rs
crates/cquests-server/: Cargo.toml
crates/cquests-server/src/: lib.rs
docs/assesment_logs/: Mathieu_Simard.md
models/: README.md  manifest.toml
