[package]
name = "cquests"
version = "0.1.0"
edition = "2024"

[dependencies]

[workspace]
resolver = "3"
members = [
	"crates/cquests-core",
	"crates/cquests-engine",
	"crates/cquests-client",
	"crates/cquests-server",
	"crates/cquests-mcp",
	"crates/cquests-llm",
	"crates/cquests-gm",
]

# NOTE: cquests-gm depends only on local crates and uses the mock LLM backend
# by default, so it's safe to include in the workspace.
