[package]
name = "cquests-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
cquests-core = { path = "../cquests-core" }
cquests-server = { path = "../cquests-server" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
