[package]
name = "cquests-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
cquests-core = { path = "../cquests-core" }
cquests-server = { path = "../cquests-server" }
rmcp = { version = "0.13.0", features = ["server", "client", "macros", "transport-io", "transport-async-rw"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "sync", "io-util", "io-std"] }
futures = "0.3.31"

[dev-dependencies]
pretty_assertions = "1.4.1"
